--- a/module2-solution/css/stylesheet.css
+++ b/module2-solution/css/stylesheet.css
@@ -2,16 +2,55 @@
   box-sizing: border-box;
 }
 
+
+h1{
+  text-align: center;  
+}
+
 p {
   border: 1px solid black;
-  padding: 10px;
+  padding: 50px 10px 10px;
   text-align: justify;
-  background-color: #ac73b2;
-  width: 90%;
+  background-color: grey;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
   font-family: Helvetica;
+  color: black;
+}
+
+#title1 {
+  background-color: salmon;
+  color: black;
+}
+
+#title2 {
+  background-color: crimson;
   color: white;
+}
+
+#title3 {
+  background-color: burlywood;
+  color: black;
+}
+
+.title {
+  border: 1px solid black;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding:5px 20px;
+  width: 150px;
+  text-align: center;
+  margin: 0;
+  font-family: Verdana, Arial, sans-serif;
+}
+
+.section {
+  position: relative;
+  width: 90%;
+  margin-left:auto;
+  margin-right: auto;
 }
 
 /* Simple Responsive Framework. */
@@ -23,7 +62,6 @@ p {
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -67,7 +105,6 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-md-1 {
     width: 8.33%;
@@ -105,13 +142,16 @@ p {
   .col-md-12 {
     width: 100%;
   }
+
+  div.col-md-12 .section{
+    width: 95%;
+  }
 }
 
 /********** Small devices only **********/
 @media (max-width: 767px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-sm-1 {
     width: 8.33%;
@@ -148,5 +188,9 @@ p {
   }
   .col-sm-12 {
     width: 100%;
+  }
+  
+  div.col-sm-12 p {
+    width:100%;
   }
 }
